src/test/deca/context/invalid/pierre/objects/extendsUndefined.deca
class A {
    boolean ok;
}
class B extends C {
    boolean nok;
}
{}